[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
non_snake_case = "allow"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.6", features = ["csr", "nightly"] }
